# gradido

./: .dockerignore  .env.git  .env.shell  .gitattributes  .gitignore  .gitmodules  .prettierrc.js  .project  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DOCKER_MORE_CLOSELY.md  Dockerfile  Dockerfile.debug  Doxyfile  FindOpenSSL.cmake  ISSUE_TEMPLATE.md  README  README.md  account-checkEmail.html  account-login.html  account-registerDirect.html  account-resetPassword.html  account-updateUserPassword.html  biome.json  compile_pot.sh  compile_proto.sh  composer.json  conanfile.txt  copy_to_www.sh  database.d.ts  database.d.ts.map  database.tsbuildinfo  docker-compose.apple-m1.override.yml  docker-compose.override.yml  docker-compose.reset.yml  docker-compose.test.yml  docker-compose.yml  files_to_translate.txt  (+12 more)
backend/rust_modules/ed25519_bip32_c_interface/: Cargo.toml
backend/rust_modules/ed25519_bip32_c_interface/include/: ed25519_bip32_c_interface.h
backend/rust_modules/ed25519_bip32_c_interface/src/: lib.rs
backend/rust_modules/gradido_ed25519_bip32/: Cargo.toml
backend/rust_modules/gradido_ed25519_bip32/include/: gradido_ed25519_bip32.h
backend/rust_modules/gradido_ed25519_bip32/src/: lib.rs
login_server/: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.lib  Dockerfile  Dockerfile.alpine-debug  Dockerfile.debug  Dockerfile.default  Doxyfile  FindOpenSSL.cmake  README  README.md  compile_pot.sh  conanfile.txt  unix_parse_proto.sh
login_server/Dockerfiles/: Dockefile.protoc  Dockerfile.default  Dockerfile.dependencies  Dockerfile.dependencies-alpine  Dockerfile.protoc  build_and_run.sh
login_server/Dockerfiles/alpine/: Dockerfile.debug  Dockerfile.dependencies  Dockerfile.release  Dockerfile.with_config
login_server/Dockerfiles/ubuntu/: Dockerfile.debug  Dockerfile.dependencies  Dockerfile.release  Dockerfile.test
login_server/dependencies/iota-wrapper/: CMakeLists.txt
login_server/dependencies/iota-wrapper/src/: iotaWrapper.cpp  iotaWrapper.h
login_server/dependencies/iota_client/: Cargo.toml
login_server/dependencies/iota_client/include/: iota_client.h
login_server/dependencies/iota_client/src/: lib.rs
login_server/scripts/: build_debug.sh  compile_pot.sh  files_to_translate.txt  prepare_build.sh  unittest_coverage.sh  unix_parse_proto.sh  windows_parse_proto.sh
login_server/skeema/gradido_login/: app_access_tokens.sql  elopage_buys.sql  email_opt_in.sql  email_opt_in_types.sql  groups.sql  hedera_ids.sql  node_servers.sql  pending_tasks.sql  roles.sql  user_backups.sql  user_roles.sql  users.sql
login_server/skeema/gradido_login/insert/: setup_docker_group.sql  setup_hedera_group.sql
login_server/src/LOCALE/: de_DE.mo  de_DE.po  messages.pot
login_server/src/cpp/: Gradido_LoginServer.cpp  Gradido_LoginServer.h  ImportantTests.cpp  ImportantTests.h  ServerConfig.cpp  ServerConfig.h  gettext.h  main.cpp
login_server/src/cpp/Crypto/: AuthenticatedEncryption.cpp  DRRandom.h  IKeyPair.h  KeyPair.h  KeyPairEd25519.cpp  KeyPairEd25519.h  KeyPairEd25519Ex.cpp  KeyPairEd25519Ex.h  KeyPairHedera.cpp  KeyPairHedera.h  Passphrase.cpp  Passphrase.h  SecretKeyCryptography.cpp  ServerCrypto.h  mnemonic.cpp  mnemonic.h  mnemonic_german2.h
login_server/src/cpp/HTTPInterface/: AdminCheckUserBackup.cpp  AdminCheckUserBackup.h  AdminGroupsPage.cpp  AdminGroupsPage.h  AdminHederaAccountPage.h  AdminNodeServerPage.h  AdminNodeServerTestPage.cpp  AdminNodeServerTestPage.h  AdminTopicPage.cpp  AdminTopicPage.h  AdminUserPasswordReset.cpp  AdminUserPasswordReset.h  CheckEmailPage.cpp  CheckEmailPage.h  CheckTransactionPage.cpp  ConfigPage.h  DashboardPage.cpp  DebugMnemonicPage.cpp  DebugPassphrasePage.cpp  DebugPassphrasePage.h  DecodeTransactionPage.cpp  DecodeTransactionPage.h  ElopageWebhook.cpp  ElopageWebhookLight.cpp  ElopageWebhookLight.h  Error500Page.cpp  Error500Page.h  LoginPage.cpp  LoginPage.h  PageRequestHandlerFactory.cpp  PageRequestHandlerFactory.h  PageRequestMessagedHandler.cpp  PageRequestMessagedHandler.h  PassphrasePage.cpp  PassphrasePage.h  PassphrasedTransaction.cpp  PassphrasedTransaction.h  RegisterAdminPage.cpp  RegisterDirectPage.cpp  RegisterDirectPage.h  (+12 more)
login_server/src/cpp/JSONInterface/: JsonAdminEmailVerificationResend.cpp  JsonAdminEmailVerificationResend.h  JsonAppLogin.cpp  JsonAppLogin.h  JsonAquireAccessToken.cpp  JsonAquireAccessToken.h  JsonCheckSessionState.cpp  JsonCheckSessionState.h  JsonCheckUsername.cpp  JsonCheckUsername.h  JsonCreateTransaction.cpp  JsonCreateTransaction.h  JsonCreateUser.cpp  JsonCreateUser.h  JsonGetLogin.cpp  JsonGetLogin.h  JsonGetRunningUserTasks.cpp  JsonGetRunningUserTasks.h  JsonGetUserInfos.cpp  JsonGetUserInfos.h  JsonGetUsers.cpp  JsonGetUsers.h  JsonHasElopage.cpp  JsonHasElopage.h  JsonLoginViaEmailVerificationCode.cpp  JsonLoginViaEmailVerificationCode.h  JsonLogout.cpp  JsonLogout.h  JsonNetworkInfos.cpp  JsonNetworkInfos.h  JsonPackTransaction.cpp  JsonPackTransaction.h  JsonRequestHandler.cpp  JsonRequestHandler.h  JsonRequestHandlerFactory.cpp  JsonResetPassword.cpp  JsonResetPassword.h  JsonSearch.cpp  JsonSearch.h  JsonSendEmail.cpp  (+11 more)
login_server/src/cpp/MySQL/: Binder.cpp  Connector.cpp  SessionImpl.cpp  (+4 more)
login_server/src/cpsp/: .gitignore  AdminCheckUserBackup.cpsp  AdminGroups.cpsp  AdminHederaAccount.cpsp  AdminHederaTopic.cpsp  AdminNodeServer.cpsp  AdminNodeServerTest.cpsp  AdminNodeServers.cpsp  AdminTopic.cpsp  AdminUserPasswordReset.cpsp  CheckEmail.cpsp  CheckTransaction.cpsp  Config.cpsp  Dashboard.cpsp  DebugMnemonic.cpsp  DebugPassphrase.cpsp  DecodeTransaction.cpsp  Error500.cpsp  Login.cpsp  Passphrase.cpsp  PassphrasedTransaction.cpsp  Register.cpsp  RegisterAdmin.cpsp  RegisterDirect.cpsp  RepairDefectPassphrase.cpsp  ResetPassword.cpsp  SaveKeys.cpsp  TestIota.cpsp  TestUserGenerator.cpsp  TranslatePassphrase.cpsp  UserUpdateGroup.cpsp  UserUpdatePassword.cpsp  adminCheckUserBackup.cpsp  adminGroups.cpsp  adminNodeServer.cpsp  adminNodeServerTest.cpsp  adminTopic.cpsp  adminUserPasswordReset.cpsp  checkEmail.cpsp  checkTransaction.cpsp  (+18 more)
(+5616 files in other folders)
